0.9.9 (trunk):
* Initial public release, based on mirage/mirage-platform#0.9.8